--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a class="logo">
+            <img class="logo-img" src="" alt="">
+            <p class="logo-text"></p>
+        </a>
+    </header>
 </body>
 </html>
