--- a/index.html
+++ b/index.html
@@ -1,48 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header class="header">
-        <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="">
-        <img src="" alt="" class="brand-img">
-        <p class="brand-text"></p>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href=""></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="">
+            <img src="" alt="" class="brand-img" />
+            <p class="brand-text">Logo</p>
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#"></a></li>
-            <li><a class="dropdown-item" href="#"></a></li>
-            <li><a class="dropdown-item" href="#"></a></li>
-          </ul>
-        </li>
-      </ul>
-      <a></a>
-    </div>
-  </div>
-        </nav>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="">Page1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Page2</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Page3
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Section1 page 3</a></li>
+                  <li><a class="dropdown-item" href="#">Section2 page 3</a></li>
+                  <li><a class="dropdown-item" href="#">Section3 page 3</a></li>
+                </ul>
+              </li>
+            </ul>
+            <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
+              >go to bot</a
+            >
+          </div>
+        </div>
+      </nav>
     </header>
-    <section class="hero"></section>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVpZVfvYPNcxl9yqGAQJtK/QltBqQ/2RHR" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XFwbbLwaJvX/FJqYx5c5W2t7cKSOhTO4rXz+uHPwzWfgyvZ6FfKq/AI" crossorigin="anonymous"></script>
-</body>
+    <main>
+      <section class="hero">
+        <h1 class="title">Title</h1>
+        <p class="hero-text">Ми -</p>
+        <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
+          >go to bot</a
+        >
+      </section>
+      <section class="advantages">
+        <ul>
+          <li>
+            <h2>Advantage1</h2>
+            <p>Description of advantage1</p>
+          </li>
+          <li>
+            <h2>Advantage2</h2>
+            <p>Description of advantage2</p>
+          </li>
+          <li>
+            <h2>Advantage3</h2>
+            <p>Description of advantage3</p>
+          </li>
+        </ul>
+      </section>
+      <section class="support">
+        <h2>Support title</h2>
+        <p>Support text</p>
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Підтримати
+        </button>
+        <div
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">
+                  Заповніть форму
+                </h3>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <input
+                    type="text"
+                    class="form-control mb-3"
+                    id="name"
+                    name="name"
+                    placeholder="Ім'я..."
+                    required
+                  />
+                  <input
+                    type="email"
+                    class="form-control mb-3"
+                    id="email"
+                    name="email"
+                    placeholder="Email..."
+                    required
+                  />
+                  <input
+                    type="tel"
+                    class="form-control mb-3"
+                    id="number"
+                    name="number"
+                    placeholder="Номер телефону..."
+                    required
+                  />
+                  <textarea
+                    class="form-control"
+                    id="message"
+                    name="message"
+                    rows="3"
+                  ></textarea>
+                  <button type="submit" class="btn btn-primary">
+                    Надіслати
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVpZVfvYPNcxl9yqGAQJtK/QltBqQ/2RHR"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XFwbbLwaJvX/FJqYx5c5W2t7cKSOhTO4rXz+uHPwzWfgyvZ6FfKq/AI"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
