--- a/index.html
+++ b/index.html
@@ -65,32 +65,33 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="title">Title</h1>
-        <p class="hero-text">Ми -</p>
+        <h1 class="title">Освітній ШІ-репетитор у твоєму       Telegram</h1>
+        <p class="hero-text">Сьогодні навчання може бути досить непростим. Але тепер поруч є ШІ-репетитор, який допоможе розібратися в будь-якій темі, вдосконалити знання з предметів та зробити процес навчання захопливим. І все це прямо в Telegram!</p>
         <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
           >go to bot</a
         >
       </section>
       <section class="problem">
-        <h2>Пробема</h2>
-        <p>опис проблеми</p>
+        <h2>Чому освітні втрати важливі</h2>
+        <p>Війна та карантин спровокували значні освітні втрати, оскільки школярі та студенти були змушені пропускати уроки. В Україні ці втрати оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати до 1400 доларів річного доходу, а за все життя ця сума може досягти 25 тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців вартість навчальних втрат становитиме 10 трильйонів доларів
+</p>
       </section>
       <section class="solution">
-        <h2>Рішення</h2>
-        <p>опис рішення</p>
+        <h2>Що вміє бот</h2>
+        <p>Наш ШІ-репетитор створений для того, щоб допомогти вам подолати прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й сильні сторони та створює персоналізований план навчання саме для вас. Усе відбувається у зручному форматі,який включає відео, тести, інтерактивні завдання та елементи гри, щоб навчання було не нудним, а справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити свої досягнення і зрозуміти, над чим варто працювати далі</p>
       </section>
       <section class="for">
         <ul>
           <li>
             <h2>Для студентів:</h2>
-            <p>Покращюємо ...</p>
+            <p>Надаємо підтримку у вивченні складних тем, адаптації до академічного середовища або покращення навичок тайм-менеджменту.</p>
             <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
               >go to bot</a
             >
           </li>
           <li>
-            <h2>Для школярів:</h2>
-            <p>Допомагаємо ...</p>
+            <h2>Для учнів середньої та старшої школи:</h2>
+            <p>Допомагаємо заповнити прогалини у знаннях і зробити навчання легшим і цікавішим. не</p>
             <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
               >go to bot</a
             >
@@ -98,18 +99,30 @@
         </ul>
       </section>
       <section class="advantages">
+        <h2>Чому варто обрати саме нас?</h2>
         <ul>
           <li>
-            <h2>Advantage1</h2>
-            <p>Description of advantage1</p>
+            <h2>Персональний підхід</h2>
+            <p>ШІ-репетитор адаптується до ваших потреб: спочатку оцінює рівень знань, а потім розробляє персональний навчальний план, який допомагає охопити всі необхідні аспекти</p>
           </li>
           <li>
-            <h2>Advantage2</h2>
-            <p>Description of advantage2</p>
+            <h2>Пояснення помилок</h2>
+            <p>Бот не лише дає відповіді, а й допомагає зрозуміти, де ви помилились, і підказує, як це виправити
+</p>
           </li>
           <li>
-            <h2>Advantage3</h2>
-            <p>Description of advantage3</p>
+            <h2>Інтерактивність</h2>
+            <p>Навчання стає цікавішим завдяки інтерактивним відео, тестам і різноманітним завданням, що роблять складні теми більш доступними та зрозумілими
+</p>
+          </li>
+          <li>
+            <h2>Гейміфікація</h2>
+            <p>Навчальний процес стає захопливою грою: рівні, нагороди та досягнення мотивують рухатися далі
+</p>
+          </li>
+          <li>
+            <h2>Telegram-бот</h2>
+            <p>Все доступно прямо в Telegram, тож не потрібно встановлювати жодних додаткових додатків чи шукати інші платформи/p>
           </li>
         </ul>
       </section>
