--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
         >
       </section>
       <section class="problem">
-        <h2>Чому освітні втрати важливі</h2>
-        <p>Війна та карантин спровокували значні освітні втрати, оскільки школярі та студенти були змушені пропускати уроки. В Україні ці втрати оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати до 1400 доларів річного доходу, а за все життя ця сума може досягти 25 тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців вартість навчальних втрат становитиме 10 трильйонів доларів
+        <h2 class="prob-title">Чому освітні втрати важливі</h2>
+        <p class="prob-text">>Війна та карантин спровокували значні освітні втрати, оскільки школярі та студенти були змушені пропускати уроки. В Україні ці втрати оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати до 1400 доларів річного доходу, а за все життя ця сума може досягти 25 тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців вартість навчальних втрат становитиме 10 трильйонів доларів
 </p>
       </section>
       <section class="solution">
-        <h2>Що вміє бот</h2>
-        <p>Наш ШІ-репетитор створений для того, щоб допомогти вам подолати прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й сильні сторони та створює персоналізований план навчання саме для вас. Усе відбувається у зручному форматі,який включає відео, тести, інтерактивні завдання та елементи гри, щоб навчання було не нудним, а справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити свої досягнення і зрозуміти, над чим варто працювати далі</p>
+        <h2 class="sol-title">>Що вміє бот</h2>
+        <p class="sol-text">>Наш ШІ-репетитор створений для того, щоб допомогти вам подолати прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й сильні сторони та створює персоналізований план навчання саме для вас. Усе відбувається у зручному форматі,який включає відео, тести, інтерактивні завдання та елементи гри, щоб навчання було не нудним, а справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити свої досягнення і зрозуміти, над чим варто працювати далі</p>
       </section>
       <section class="for">
-        <ul>
-          <li>
-            <h2>Для студентів:</h2>
-            <p>Надаємо підтримку у вивченні складних тем, адаптації до академічного середовища або покращення навичок тайм-менеджменту.</p>
+        <ul class="for-list">
+          <li class="for-item">
+            <h2 class="for-title">Для студентів:</h2>
+            <p class="for-text">Надаємо підтримку у вивченні складних тем, адаптації до академічного середовища або покращення навичок тайм-менеджменту.</p>
             <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
               >go to bot</a
             >
           </li>
-          <li>
-            <h2>Для учнів середньої та старшої школи:</h2>
-            <p>Допомагаємо заповнити прогалини у знаннях і зробити навчання легшим і цікавішим. не</p>
+          <li class="for-item">
+            <h2 class="for-title">Для учнів середньої та старшої школи:</h2>
+            <p class="for-texr">Допомагаємо заповнити прогалини у знаннях і зробити навчання легшим і цікавішим. не</p>
             <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
               >go to bot</a
             >
