--- a/index.html
+++ b/index.html
@@ -15,86 +15,107 @@
   </head>
   <body>
     <header class="header">
-      <a class="navbar-brand" href="">
-        <img src="" alt="" class="brand-img" />
-        <p class="brand-text">Logo</p>
-      </a>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="">Page1</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Page2</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  >Page3
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Section1 page 3</a></li>
-                  <li><a class="dropdown-item" href="#">Section2 page 3</a></li>
-                  <li><a class="dropdown-item" href="#">Section3 page 3</a></li>
-                </ul>
-              </li>
-            </ul>
-            <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
-              >go to bot</a
+      <div class="container header-cont">
+        <a class="navbar-brand" href="">
+          <img src="./images/logo.png" alt="" class="brand-img" />
+          <p>ШІ-репетитор</p>
+        </a>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
             >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Головна</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./coach.html">Почати навчання</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                    >Page3
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="#">Section1 page 3</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Section2 page 3</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Section3 page 3</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="title">Освітній ШІ-репетитор у твоєму       Telegram</h1>
-        <p class="hero-text">Сьогодні навчання може бути досить непростим. Але тепер поруч є ШІ-репетитор, який допоможе розібратися в будь-якій темі, вдосконалити знання з предметів та зробити процес навчання захопливим. І все це прямо в Telegram!</p>
-        <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
-          >go to bot</a
-        >
+      <section class="container hero">
+        <h1 class="title">Освітній ШІ-репетитор у твоєму Telegram</h1>
+        <p class="hero-text">
+          Сьогодні навчання може бути досить непростим. Але тепер поруч є
+          ШІ-репетитор, який допоможе розібратися в будь-якій темі, вдосконалити
+          знання з предметів та зробити процес навчання захопливим.
+        </p>
       </section>
       <section class="problem">
         <h2 class="prob-title">Чому освітні втрати важливі</h2>
-        <p class="prob-text">>Війна та карантин спровокували значні освітні втрати, оскільки школярі та студенти були змушені пропускати уроки. В Україні ці втрати оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати до 1400 доларів річного доходу, а за все життя ця сума може досягти 25 тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців вартість навчальних втрат становитиме 10 трильйонів доларів
-</p>
+        <p class="prob-text">
+          >Війна та карантин спровокували значні освітні втрати, оскільки
+          школярі та студенти були змушені пропускати уроки. В Україні ці втрати
+          оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати
+          до 1400 доларів річного доходу, а за все життя ця сума може досягти 25
+          тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців
+          вартість навчальних втрат становитиме 10 трильйонів доларів
+        </p>
       </section>
       <section class="solution">
-        <h2 class="sol-title">>Що вміє бот</h2>
-        <p class="sol-text">>Наш ШІ-репетитор створений для того, щоб допомогти вам подолати прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й сильні сторони та створює персоналізований план навчання саме для вас. Усе відбувається у зручному форматі,який включає відео, тести, інтерактивні завдання та елементи гри, щоб навчання було не нудним, а справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити свої досягнення і зрозуміти, над чим варто працювати далі</p>
+        <h2 class="sol-title">Що вміє бот</h2>
+        <p class="sol-text">
+          Наш ШІ-репетитор створений для того, щоб допомогти вам подолати
+          прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й
+          сильні сторони та створює персоналізований план навчання саме для вас.
+          Усе відбувається у зручному форматі,який включає відео, тести,
+          інтерактивні завдання та елементи гри, щоб навчання було не нудним, а
+          справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх
+          виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити
+          свої досягнення і зрозуміти, над чим варто працювати далі
+        </p>
       </section>
       <section class="for">
         <ul class="for-list">
           <li class="for-item">
-            <h2 class="for-title">Для студентів:</h2>
-            <p class="for-text">Надаємо підтримку у вивченні складних тем, адаптації до академічного середовища або покращення навичок тайм-менеджменту.</p>
-            <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
-              >go to bot</a
-            >
+            <h2 class="for-title">Для студентів (18-24):</h2>
+            <p class="for-text">
+              Надаємо підтримку у вивченні складних тем, адаптації до
+              академічного середовища або покращення навичок тайм-менеджменту.
+            </p>
           </li>
           <li class="for-item">
-            <h2 class="for-title">Для учнів середньої та старшої школи:</h2>
-            <p class="for-texr">Допомагаємо заповнити прогалини у знаннях і зробити навчання легшим і цікавішим. не</p>
-            <a href="https://t.me/Coach_A_I_bot" class="bot" target="_blank"
-              >go to bot</a
-            >
+            <h2 class="for-title">Для підлітків (12-17):</h2>
+            <p class="for-texr">
+              Учням середньої і старшої школи допомагаємо заповнити прогалини у
+              знаннях і зробити навчання легшим і цікавішим. не
+            </p>
           </li>
         </ul>
       </section>
@@ -102,27 +123,38 @@
         <h2>Чому варто обрати саме нас?</h2>
         <ul>
           <li>
+            <img src="./images/personal.png" alt="" />
             <h2>Персональний підхід</h2>
-            <p>ШІ-репетитор адаптується до ваших потреб: спочатку оцінює рівень знань, а потім розробляє персональний навчальний план, який допомагає охопити всі необхідні аспекти</p>
+            <p>
+              ШІ-репетитор адаптується до ваших потреб: спочатку оцінює рівень
+              знань, а потім розробляє персональний навчальний план, який
+              допомагає охопити всі необхідні аспекти
+            </p>
           </li>
           <li>
+            <img src="./images/mistakes.png" alt="" />
             <h2>Пояснення помилок</h2>
-            <p>Бот не лише дає відповіді, а й допомагає зрозуміти, де ви помилились, і підказує, як це виправити
-</p>
+            <p>
+              Бот не лише дає відповіді, а й допомагає зрозуміти, де ви
+              помилились, і підказує, як це виправити
+            </p>
           </li>
           <li>
+            <img src="./images/interactive.png" alt="" />
             <h2>Інтерактивність</h2>
-            <p>Навчання стає цікавішим завдяки інтерактивним відео, тестам і різноманітним завданням, що роблять складні теми більш доступними та зрозумілими
-</p>
+            <p>
+              Навчання стає цікавішим завдяки інтерактивним відео, тестам і
+              різноманітним завданням, що роблять складні теми більш доступними
+              та зрозумілими
+            </p>
           </li>
           <li>
+            <img src="./images/gaming.png" alt="" />
             <h2>Гейміфікація</h2>
-            <p>Навчальний процес стає захопливою грою: рівні, нагороди та досягнення мотивують рухатися далі
-</p>
-          </li>
-          <li>
-            <h2>Telegram-бот</h2>
-            <p>Все доступно прямо в Telegram, тож не потрібно встановлювати жодних додаткових додатків чи шукати інші платформи/p>
+            <p>
+              Навчальний процес стає захопливою грою: рівні, нагороди та
+              досягнення мотивують рухатися далі
+            </p>
           </li>
         </ul>
       </section>
