trying to make a mobile version

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
           знання з предметів та зробити процес навчання захопливим.
         </p>
       </section>
-      <section class="problem">
+      <section class="container problem">
         <h2 class="prob-title">Чому освітні втрати важливі</h2>
         <p class="prob-text">
-          >Війна та карантин спровокували значні освітні втрати, оскільки
-          школярі та студенти були змушені пропускати уроки. В Україні ці втрати
+          Війна та карантин спровокували значні освітні втрати, оскільки школярі
+          та студенти були змушені пропускати уроки. В Україні ці втрати
           оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати
           до 1400 доларів річного доходу, а за все життя ця сума може досягти 25
           тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців
           вартість навчальних втрат становитиме 10 трильйонів доларів
         </p>
       </section>
-      <section class="solution">
+      <section class="container solution">
         <h2 class="sol-title">Що вміє бот</h2>
         <p class="sol-text">
           Наш ШІ-репетитор створений для того, щоб допомогти вам подолати
@@ -101,7 +101,7 @@
           свої досягнення і зрозуміти, над чим варто працювати далі
         </p>
       </section>
-      <section class="for">
+      <section class="container for">
         <ul class="for-list">
           <li class="for-item">
             <h2 class="for-title">Для студентів (18-24):</h2>
@@ -112,46 +112,46 @@
           </li>
           <li class="for-item">
             <h2 class="for-title">Для підлітків (12-17):</h2>
-            <p class="for-texr">
+            <p class="for-text">
               Учням середньої і старшої школи допомагаємо заповнити прогалини у
               знаннях і зробити навчання легшим і цікавішим. не
             </p>
           </li>
         </ul>
       </section>
-      <section class="advantages">
-        <h2>Чому варто обрати саме нас?</h2>
-        <ul>
-          <li>
-            <img src="./images/personal.png" alt="" />
-            <h2>Персональний підхід</h2>
-            <p>
+      <section class="container advantages">
+        <h2 class="advant-title">Чому варто обрати саме нас?</h2>
+        <ul class="advant-list">
+          <li class="advant-item">
+            <img class="advant-img" src="./images/personal.png" alt="" />
+            <h2 class="advant-item-title">Персональний підхід</h2>
+            <p class="advant-text">
               ШІ-репетитор адаптується до ваших потреб: спочатку оцінює рівень
               знань, а потім розробляє персональний навчальний план, який
               допомагає охопити всі необхідні аспекти
             </p>
           </li>
-          <li>
-            <img src="./images/mistakes.png" alt="" />
-            <h2>Пояснення помилок</h2>
-            <p>
+          <li class="advant-item">
+            <img class="advant-img" src="./images/mistakes.png" alt="" />
+            <h2 class="advant-item-title">Пояснення помилок</h2>
+            <p class="advant-text">
               Бот не лише дає відповіді, а й допомагає зрозуміти, де ви
               помилились, і підказує, як це виправити
             </p>
           </li>
-          <li>
-            <img src="./images/interactive.png" alt="" />
-            <h2>Інтерактивність</h2>
-            <p>
+          <li class="advant-item">
+            <img class="advant-img" src="./images/interactive.png" alt="" />
+            <h2 class="advant-item-title">Інтерактивність</h2>
+            <p class="advant-text">
               Навчання стає цікавішим завдяки інтерактивним відео, тестам і
               різноманітним завданням, що роблять складні теми більш доступними
               та зрозумілими
             </p>
           </li>
-          <li>
-            <img src="./images/gaming.png" alt="" />
-            <h2>Гейміфікація</h2>
-            <p>
+          <li class="advant-item">
+            <img class="advant-img" src="./images/gaming.png" alt="" />
+            <h2 class="advant-item-title">Гейміфікація</h2>
+            <p class="advant-text">
               Навчальний процес стає захопливою грою: рівні, нагороди та
               досягнення мотивують рухатися далі
             </p>
@@ -163,11 +163,12 @@
         <p>Support text</p>
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn-support"
           data-bs-toggle="modal"
           data-bs-target="#exampleModal"
         >
-          Підтримати
+          <img class="support-img" src="./images/heart-Photoroom.png" alt="" />
+          <p class="btn-text">Підтримати проєкт</p>
         </button>
         <div
           class="modal fade"
