--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <body>
     <header class="header">
       <div class="container header-cont">
-        <a class="navbar-brand" href="">
-          <img src="./images/logo.png" alt="" class="brand-img" />
-          <p>ШІ-репетитор</p>
+        <a class="logo" href="">
+          <img src="./images/logo.png" alt="" class="logo-img" />
+          <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img">
+          <p class="logo-text">ШІ-репетитор</p>
         </a>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
