--- a/index.html
+++ b/index.html
@@ -18,49 +18,57 @@
       <div class="container header-cont">
         <a class="logo" href="">
           <img src="./images/logo.png" alt="" class="logo-img" />
-          <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img">
+          <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img" />
           <p class="logo-text">ШІ-репетитор</p>
         </a>
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Головна</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./coach.html">Почати навчання</a>
-                </li>
-                <li class="nav-item dropdown">
+        <nav class="nav">
+          <button
+            class="btn btn-menu"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav"
+          >
+            Open
+          </button>
+          <div
+            class="offcanvas offcnvas-end"
+            tabindex="-1"
+            id="offcanvasNav"
+            aria-labelledby="offcanvasNavLabel"
+          >
+            <div class="offcanvas-header">
+              <a class="logo" href="">
+                <img src="./images/logo.png" alt="" class="logo-img" />
+                <img
+                  src="./images/logo-mobile.png"
+                  alt=""
+                  class="logo-mobile-img"
+                />
+                <p class="logo-text">ШІ-репетитор</p>
+              </a>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="menu-list">
+                <li class="menu-item"><a href="./index.html" class="menu-link">Головна</a></li>
+                <li class="menu-item"><a href="./coach.html" class="menu-link">Почати навчання</a></li>
+                <li class="menu-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
                     href="#"
-                    role="button"
+                    class="menu-link dropdown-toggle"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
-                    >Page3
-                  </a>
+                  >Dropdown</a>
                   <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">Section1 page 3</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Section2 page 3</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Section3 page 3</a>
-                    </li>
+                    <li class="dropdown-item"><a href="" class="dropdown-link">something1</a></li>
+                    <li class="dropdown-item"><a href="" class="dropdown-link">something2</a></li>
+                    <li class="dropdown-item"><a href="" class="dropdown-link">something3</a></li>
                   </ul>
                 </li>
               </ul>
