--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             tabindex="-1"
             id="offcanvasNav"
             aria-labelledby="offcanvasNavLabel"
+            data-bs-backdrop="static"
           >
             <div class="offcanvas-header">
               <a class="logo" href="./index.html">
