--- a/eng-coach.html
+++ b/eng-coach.html
@@ -16,10 +16,10 @@
 <body>
     <header class="header">
       <div class="container header-cont">
-        <a class="logo" href="./index.html">
+        <a class="logo" href="./eng-index.html">
           <img src="./images/logo.png" alt="" class="logo-img" />
           <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img" />
-          <p class="logo-text">ШІ-репетитор</p>
+          <p class="logo-text">Coach-AI</p>
         </a>
         <nav class="nav">
           <button
@@ -40,14 +40,14 @@
             data-bs-backdrop="static"
           >
             <div class="offcanvas-header">
-              <a class="logo" href="./index.html">
+              <a class="logo" href="./eng-index.html">
                 <img src="./images/logo.png" alt="" class="logo-img" />
                 <img
                   src="./images/logo-mobile.png"
                   alt=""
                   class="logo-mobile-img"
                 />
-                <p class="logo-text">ШІ-репетитор</p>
+                <p class="logo-text">Coach-AI</p>
               </a>
               <button
                 type="button"
@@ -59,10 +59,10 @@
             <div class="offcanvas-body">
               <ul class="nav-canvas-list">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">Головна</a>
+                  <a href="./eng-index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./coach.html" class="nav-link">Почати навчання</a>
+                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -71,7 +71,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Мова сайту
+                    Site language
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
@@ -85,19 +85,19 @@
           </div>
           <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">Головна</a>
+                  <a href="./eng-index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./coach.html" class="nav-link">Почати навчання</a>
+                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
                     class="nav-link dropdown-toggle"
-                    href=""
+                    href="#"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Мова сайту
+                    Site language
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
