--- a/eng-index.html
+++ b/eng-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coach-AI</title>
+    <title>Coach-Ai</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,10 +16,10 @@
   <body>
     <header class="header">
       <div class="container header-cont">
-        <a class="logo" href="./index.html">
+        <a class="logo" href="./eng-index.html">
           <img src="./images/logo.png" alt="" class="logo-img" />
           <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img" />
-          <p class="logo-text">ШІ-репетитор</p>
+          <p class="logo-text">Coach-AI</p>
         </a>
         <nav class="nav">
           <button
@@ -40,14 +40,14 @@
             data-bs-backdrop="static"
           >
             <div class="offcanvas-header">
-              <a class="logo" href="./index.html">
+              <a class="logo" href="./eng-index.html">
                 <img src="./images/logo.png" alt="" class="logo-img" />
                 <img
                   src="./images/logo-mobile.png"
                   alt=""
                   class="logo-mobile-img"
                 />
-                <p class="logo-text">ШІ-репетитор</p>
+                <p class="logo-text">Coach-AI</p>
               </a>
               <button
                 type="button"
@@ -59,10 +59,10 @@
             <div class="offcanvas-body">
               <ul class="nav-canvas-list">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">Головна</a>
+                  <a href="./eng-index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./coach.html" class="nav-link">Почати навчання</a>
+                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -71,12 +71,12 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Мова сайту
+                    Site language
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
                     <li>
-                      <a class="menu-item" href="#">English</a>
+                      <a class="menu-item" href="./eng-index.html">English</a>
                     </li>
                   </ul>
                 </li>
@@ -85,10 +85,10 @@
           </div>
           <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">Головна</a>
+                  <a href="./eng-index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./coach.html" class="nav-link">Почати навчання</a>
+                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -97,7 +97,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Мова сайту
+                    Site language
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
@@ -112,90 +112,77 @@
     </header>
     <main>
       <section class="container hero">
-        <h1 class="title">Освітній ШІ-репетитор у твоєму браузері</h1>
+        <h1 class="title">Educational AI tutor in your browser</h1>
         <p class="hero-text">
-          Сьогодні навчання може бути досить непростим. Але тепер поруч є
-          ШІ-репетитор, який допоможе розібратися в будь-якій темі, вдосконалити
-          знання з предметів та зробити процес навчання захопливим.
+          Studying can be quite challenging these days. But now there is an AI tutor to help you understand any topic, improve
+          your knowledge of subjects, and make the learning process exciting.
         </p>
       </section>
       <section class="container problem">
-        <h2 class="prob-title">Чому освітні втрати важливі</h2>
+        <h2 class="prob-title">Why educational loss matters</h2>
         <p class="prob-text">
-          Війна та карантин спровокували значні освітні втрати, оскільки школярі
-          та студенти були змушені пропускати уроки. В Україні ці втрати
-          оцінюються у 5,5 мільярдів доларів. Через це учні ризикують втрачати
-          до 1400 доларів річного доходу, а за все життя ця сума може досягти 25
-          тисяч доларів. У разі закриття шкіл у всьому світі на 5 місяців
-          вартість навчальних втрат становитиме 10 трильйонів доларів
+          The war and pandemic have caused significant educational losses, as schoolchildren
+          and students have been forced to miss classes. In Ukraine, these losses
+          are estimated at $5.5 billion. As a result, students risk losing
+          up to $1,400 in annual income, and over their lifetime, this amount could reach $25,000
+          . If schools around the world are closed for five months
+          , the cost of educational losses will be $10 trillion.
         </p>
       </section>
       <section class="container solution">
-        <h2 class="sol-title">Що вміє бот</h2>
+        <h2 class="sol-title">What the bot can do</h2>
         <p class="sol-text">
-          Наш ШІ-репетитор створений для того, щоб допомогти вам подолати
-          прогалини у навчанні. Він оцінює ваш рівень знань, визначає слабкі й
-          сильні сторони та створює персоналізований план навчання саме для вас.
-          Усе відбувається у зручному форматі,який включає відео, тести,
-          інтерактивні завдання та елементи гри, щоб навчання було не нудним, а
-          справді захопливим. Бот пояснює ваші помилки, пропонує вправи для їх
-          виправлення та регулярно показує ваш прогрес, щоб ви могли оцінити
-          свої досягнення і зрозуміти, над чим варто працювати далі
+          Our AI tutor is designed to help you overcome gaps in your learning. It analyses your knowledge level, identifies your strengths and weaknesses, and creates a personalised learning plan just for you. Everything is presented in a convenient way, including videos, quizzes, interactive tasks, and game elements to make learning fun and engaging. The bot explains everything in simple language, so you can understand it easily.
+          It explains your mistakes, suggests exercises to correct them,
+          and regularly shows your progress so you can evaluate
+          your achievements and understand what you need to work on next.
         </p>
       </section>
       <section class="container for">
         <ul class="for-list">
           <li class="for-item">
-            <h2 class="for-title">Для студентів (18-24):</h2>
+            <h2 class="for-title">For university students (18-24):</h2>
             <p class="for-text">
-              Надаємо підтримку у вивченні складних тем, адаптації до
-              академічного середовища або покращення навичок тайм-менеджменту.
+              We provide support in studying complex topics, adapting to the academic environment, or improving time management skills.
             </p>
           </li>
           <li class="for-item">
-            <h2 class="for-title">Для підлітків (12-17):</h2>
+            <h2 class="for-title">For teenagers (12-17):</h2>
             <p class="for-text">
-              Учням середньої і старшої школи допомагаємо заповнити прогалини у
-              знаннях і зробити навчання легшим і цікавішим. не
+              We help middle and high school students fill gaps in their knowledge and make learning easier and more interesting.
             </p>
           </li>
         </ul>
       </section>
       <section class="container advantages">
-        <h2 class="advant-title">Чому варто обрати саме нас?</h2>
+        <h2 class="advant-title">Why you should choose us</h2>
         <ul class="advant-list">
           <li class="advant-item">
             <img class="advant-img" src="./images/personal.png" alt="" />
-            <h2 class="advant-item-title">Персональний підхід</h2>
+            <h2 class="advant-item-title">Personalised approach</h2>
             <p class="advant-text">
-              ШІ-репетитор адаптується до ваших потреб: спочатку оцінює рівень
-              знань, а потім розробляє персональний навчальний план, який
-              допомагає охопити всі необхідні аспекти
+              The AI tutor adapts to your needs: first, it assesses your level of knowledge, and then develops a personalised learning plan that helps you cover all the necessary aspects.
             </p>
           </li>
           <li class="advant-item">
             <img class="advant-img" src="./images/mistakes.png" alt="" />
-            <h2 class="advant-item-title">Пояснення помилок</h2>
+            <h2 class="advant-item-title">Explanation of your mistakes</h2>
             <p class="advant-text">
-              Бот не лише дає відповіді, а й допомагає зрозуміти, де ви
-              помилились, і підказує, як це виправити
+              The bot not only provides answers, but also helps you understand where you went wrong and suggests how to fix it.
             </p>
           </li>
           <li class="advant-item">
             <img class="advant-img" src="./images/interactive.png" alt="" />
-            <h2 class="advant-item-title">Інтерактивність</h2>
+            <h2 class="advant-item-title">Interactivity</h2>
             <p class="advant-text">
-              Навчання стає цікавішим завдяки інтерактивним відео, тестам і
-              різноманітним завданням, що роблять складні теми більш доступними
-              та зрозумілими
+              Learning becomes more interesting thanks to interactive videos, tests and various tasks that make complex topics more accessible and understandable.
             </p>
           </li>
           <li class="advant-item">
             <img class="advant-img" src="./images/gaming.png" alt="" />
-            <h2 class="advant-item-title">Гейміфікація</h2>
+            <h2 class="advant-item-title">Gamification</h2>
             <p class="advant-text">
-              Навчальний процес стає захопливою грою: рівні, нагороди та
-              досягнення мотивують рухатися далі
+              The learning process becomes an exciting game: levels, rewards and achievements motivate you to move forward.
             </p>
           </li>
         </ul>
@@ -210,7 +197,7 @@
           data-bs-target="#exampleModal"
         >
           <img class="support-img" src="./images/heart-Photoroom.png" alt="" />
-          <p class="btn-text">Підтримати проєкт</p>
+          <p class="btn-text">Support the project</p>
         </button>
         <div
           class="modal fade"
@@ -223,7 +210,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h3 class="modal-title" id="exampleModalLabel">
-                  Залиште свої дані, ми вам передзвонимо
+                  Leave your data and we will call you back
                 </h3>
                 <button
                   type="button"
@@ -239,7 +226,7 @@
                     class="form-control mb-3"
                     id="name"
                     name="name"
-                    placeholder="Ім'я..."
+                    placeholder="Name..."
                     required
                   />
                   <input
@@ -255,7 +242,7 @@
                     class="form-control mb-3"
                     id="number"
                     name="number"
-                    placeholder="Номер телефону..."
+                    placeholder="Phone number..."
                     required
                   />
                   <label for="message">Коментар:</label>
@@ -264,10 +251,10 @@
                     id="message"
                     name="message"
                     rows="3"
-                    placeholder="Введіть текст..."
+                    placeholder="Enter your message..."
                   ></textarea>
                   <button type="submit" class="btn btn-primary">
-                    Надіслати
+                    Send
                   </button>
                 </form>
               </div>
