--- a/frontend/eng-index.html
+++ b/frontend/eng-index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <div class="container header-cont">
-        <a class="logo" href="./eng-index.html">
+        <a class="logo" href="./index.html">
           <img src="./images/logo.png" alt="" class="logo-img" />
           <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img" />
           <p class="logo-text">Coach-AI</p>
@@ -29,7 +29,7 @@
             data-bs-target="#offcanvasNav"
             aria-controls="offcanvasNav"
           >
-            <svg class="menu-svg"><use href="./images/symbol-defs.svg#icon-burger"></use></svg>
+            ≡
           </button>
 
           <div
@@ -40,14 +40,14 @@
             data-bs-backdrop="static"
           >
             <div class="offcanvas-header">
-              <a class="logo" href="./eng-index.html">
+              <a class="logo" href="./index.html">
                 <img src="./images/logo.png" alt="" class="logo-img" />
                 <img
                   src="./images/logo-mobile.png"
                   alt=""
                   class="logo-mobile-img"
                 />
-                <p class="logo-text">Coach-AI</p>
+                <p class="logo-text">ШІ-репетитор</p>
               </a>
               <button
                 type="button"
@@ -59,10 +59,10 @@
             <div class="offcanvas-body">
               <ul class="nav-canvas-list">
                 <li class="nav-item">
-                  <a href="./eng-index.html" class="nav-link">Home</a>
+                  <a href="./index.html" class="nav-link">Головна</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
+                  <a href="./coach.html" class="nav-link">Почати навчання</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -71,12 +71,12 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Site language
+                    Мова сайту
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
                     <li>
-                      <a class="menu-item" href="./eng-index.html">English</a>
+                      <a class="menu-item" href="#">English</a>
                     </li>
                   </ul>
                 </li>
@@ -85,10 +85,10 @@
           </div>
           <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="./eng-index.html" class="nav-link">Home</a>
+                  <a href="./index.html" class="nav-link">Головна</a>
                 </li>
                 <li class="nav-item">
-                  <a href="./eng-coach.html" class="nav-link">Start learning</a>
+                  <a href="./coach.html" class="nav-link">Почати навчання</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -97,7 +97,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Site language
+                    Мова сайту
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
