--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,9 +17,7 @@
     <header class="header">
       <div class="container header-cont">
         <a class="logo" href="./index.html">
-          <img src="./images/logo.png" alt="" class="logo-img" />
-          <img src="./images/logo-mobile.png" alt="" class="logo-mobile-img" />
-          <p class="logo-text">ШІ-репетитор</p>
+          ШІ-репетитор
         </a>
         <nav class="nav">
           <button
@@ -29,7 +27,7 @@
             data-bs-target="#offcanvasNav"
             aria-controls="offcanvasNav"
           >
-            <svg class="menu-svg"><use href="./images/symbol-defs.svg#icon-burger"></use></svg>
+            ≡
           </button>
 
           <div
@@ -76,7 +74,7 @@
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="menu-item" href="./index.html">Українська</a></li>
                     <li>
-                      <a class="menu-item" href="#">English</a>
+                      <a class="menu-item" href="./eng-index.html">English</a>
                     </li>
                   </ul>
                 </li>
@@ -201,16 +199,14 @@
         </ul>
       </section>
       <section class="support">
-        <h2>Support title</h2>
-        <p>Support text</p>
+        <h2>Підтримайте проєкт</h2>
         <button
           type="button"
           class="btn-support"
           data-bs-toggle="modal"
           data-bs-target="#exampleModal"
         >
-          <img class="support-img" src="./images/heart-Photoroom.png" alt="" />
-          <p class="btn-text">Підтримати проєкт</p>
+          Підтримати проєкт
         </button>
         <div
           class="modal fade"
