--- a/frontend/coach.html
+++ b/frontend/coach.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-signin-client_id" content="959143291403-8nk9mogv5cushkm72ipmi4euaqhqmkn6.apps.googleusercontent.com">
     <title>Coach-Ai</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -12,8 +13,8 @@
     />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
       <div class="container header-cont">
         <a class="logo" href="./index.html">
@@ -29,7 +30,7 @@
             data-bs-target="#offcanvasNav"
             aria-controls="offcanvasNav"
           >
-            <svg class="menu-svg"><use href="./images/symbol-defs.svg#icon-burger"></use></svg>
+            ≡
           </button>
 
           <div
@@ -74,9 +75,11 @@
                     Мова сайту
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="menu-item" href="./index.html">Українська</a></li>
                     <li>
-                      <a class="menu-item" href="./eng-index.html">English</a>
+                      <a class="menu-item" href="./index.html">Українська</a>
+                    </li>
+                    <li>
+                      <a class="menu-item" href="#">English</a>
                     </li>
                   </ul>
                 </li>
@@ -84,35 +87,50 @@
             </div>
           </div>
           <ul class="nav-list">
-                <li class="nav-item">
-                  <a href="./index.html" class="nav-link">Головна</a>
-                </li>
-                <li class="nav-item">
-                  <a href="./coach.html" class="nav-link">Почати навчання</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href=""
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Мова сайту
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="menu-item" href="./index.html">Українська</a></li>
-                    <li>
-                      <a class="menu-item" href="./eng-index.html">English</a>
-                    </li>
-                  </ul>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Головна</a>
+            </li>
+            <li class="nav-item">
+              <a href="./coach.html" class="nav-link">Почати навчання</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Мова сайту
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="menu-item" href="./index.html">Українська</a></li>
+                <li>
+                  <a class="menu-item" href="./eng-index.html">English</a>
                 </li>
               </ul>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
     <main>
+      <section id="ai-interface">
+        <textarea
+          id="ai-prompt"
+          rows="4"
+          placeholder="Ваше запитання..."
+        ></textarea>
+        <button id="send-button">Отримати відповідь</button>
 
+        <div class="response-container">
+          <p id="ai-response">Очікування запиту...</p>
+        </div>
+      </section>
+
+    
     </main>
+    <script src="./script.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVpZVfvYPNcxl9yqGAQJtK/QltBqQ/2RHR"
@@ -128,5 +146,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
