--- a/coach.html
+++ b/coach.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-signin-client_id" content="959143291403-8nk9mogv5cushkm72ipmi4euaqhqmkn6.apps.googleusercontent.com">
+    <!-- <meta name="google-signin-client_id" content="959143291403-8nk9mogv5cushkm72ipmi4euaqhqmkn6.apps.googleusercontent.com"> -->
     <title>Coach-Ai</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
