--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./index.html" class="nav__link">Головна</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Почати навчання</a>
+            <a href="./coach.html" class="nav__link">Почати навчання</a>
           </li>
           <li class="nav__item"><a href="" class="nav__link">Мова сайту</a></li>
         </ul>
